--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo-env": "^1.1.1",
     "expo-image-picker": "~17.0.8",
     "expo-status-bar": "~3.0.8",
+    "expo-updates": "~29.0.12",
     "firebase": "^12.5.0",
     "nativewind": "^4.2.1",
     "prettier-plugin-tailwindcss": "^0.5.11",
